--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/kushal9897/app-to-chat.git
     targetRevision: HEAD
-    path: manifests
+    path: mainifest
   syncPolicy:
     automated:
       prune: true
